--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta content="description" name="goit_homework_1" />
-    <!-- normalize -->
+    <!-- normalize 2-->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
@@ -32,214 +41,249 @@
 
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="header-logo">
-          Web<span class="header-color-logo">Studio</span>
-        </a>
+      <div class="conteiner-header">
+        <nav class="header-nav">
+          <a href="./index.html" class="header-logo">
+            Web<span class="header-color-logo">Studio</span>
+          </a>
 
-        <ul class="header-menu">
-          <li>
-            <a
-              href="./index.html"
-              rel="noopener noreferrer"
-              class="li-studio-header-menu"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a href="" rel="noopener noreferrer" class="li-studio-header-menu"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="" rel="noopener noreferrer" class="li-studio-header-menu"
-              >Contacts</a
-            >
-          </li>
-        </ul>
-      </nav>
+          <ul class="header-menu">
+            <li>
+              <a
+                href="./index.html"
+                rel="noopener noreferrer"
+                class="li-studio-header-menu"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="" rel="noopener noreferrer" class="li-studio-header-menu"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="" rel="noopener noreferrer" class="li-studio-header-menu"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
 
-      <address class="head-address">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="list-head-address"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="list-head-address"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="header-address">
+          <ul class="header-menu-address">
+            <li>
+              <a href="mailto:info@devstudio.com" class="list-header-address"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="list-header-address"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main class="main">
       <!-- 1 section -->
       <section class="main-title">
-        <h1 class="one-h">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button">Order Service</button>
+        <div class="conteiner">
+          <h1 class="one-h">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-button">Order Service</button>
+        </div>
       </section>
 
       <!-- 2 section -->
       <section class="main-list">
-        <h2 hidden class="two-h">team list</h2>
-        <ul>
-          <li class="li-main-list">
-            <h3 class="three-h">Strategy</h3>
-            <p class="main-p">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="li-main-list">
-            <h3 class="three-h">Punctuality</h3>
-            <p class="main-p">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="li-main-list">
-            <h3 class="three-h">Diligence</h3>
-            <p class="main-p">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="li-main-list">
-            <h3 class="three-h">Technologies</h3>
-            <p class="main-p">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 hidden class="two-h">team list</h2>
+          <ul class="ul-main-list">
+            <li class="li-main-list">
+              <h3 class="three-h">Strategy</h3>
+              <p class="main-p">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="li-main-list">
+              <h3 class="three-h">Punctuality</h3>
+              <p class="main-p">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="li-main-list">
+              <h3 class="three-h">Diligence</h3>
+              <p class="main-p">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="li-main-list">
+              <h3 class="three-h">Technologies</h3>
+              <p class="main-p">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- 3 section -->
       <section class="main-list-team">
-        <h2 class="two-h">Our Team</h2>
-        <ul>
-          <li class="li-main-list">
-            <img
-              src="./images/img1.jpg"
-              alt="Team Card 1"
-              width="264"
-              height="260"
-            />
-            <h3 class="three-h">Mark Guerrero</h3>
-            <p class="main-p">Product Designer</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/img2.jpg"
-              alt="Team Card 2"
-              width="264"
-              height="260"
-            />
-            <h3 class="three-h">Tom Ford</h3>
-            <p class="main-p">Frontend Developer</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/img3.jpg"
-              alt="Team Card 3"
-              width="264"
-              height="260"
-            />
-            <h3 class="three-h">Camila Garcia</h3>
-            <p class="main-p">Marketing</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/img4.jpg"
-              alt="Team Card 4"
-              width="264"
-              height="260"
-            />
-            <h3 class="three-h">Daniel Wilson</h3>
-            <p class="main-p">UI Designer</p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="h-main-list-team">Our Team</h2>
+          <ul class="ul-main-list-team">
+            <li class="li-main-list-team">
+              <img
+                src="./images/img1.jpg"
+                alt="Team Card 1"
+                width="264"
+                height="260"
+              />
+              <div class="main-text-team">
+                <h3 class="three-h">Mark Guerrero</h3>
+                <p class="main-p">Product Designer</p>
+              </div>
+            </li>
+            <li class="li-main-list-team">
+              <img
+                src="./images/img2.jpg"
+                alt="Team Card 2"
+                width="264"
+                height="260"
+              />
+              <div class="main-text-team">
+                <h3 class="three-h">Tom Ford</h3>
+                <p class="main-p">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="li-main-list-team">
+              <img
+                src="./images/img3.jpg"
+                alt="Team Card 3"
+                width="264"
+                height="260"
+              />
+              <div class="main-text-team">
+                <h3 class="three-h">Camila Garcia</h3>
+                <p class="main-p">Marketing</p>
+              </div>
+            </li>
+            <li class="li-main-list-team">
+              <img
+                src="./images/img4.jpg"
+                alt="Team Card 4"
+                width="264"
+                height="260"
+              />
+              <div class="main-text-team">
+                <h3 class="three-h">Daniel Wilson</h3>
+                <p class="main-p">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- 4 section -->
       <section class="main-list-portfolio">
-        <h2 class="two-h">Our Portfolio</h2>
-        <ul>
-          <li class="li-main-list">
-            <img
-              src="./images/ProjectCard1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="three-h">Banking App</h3>
-            <p class="main-p">App</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/ProjectCard2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="three-h">Cashless Payment</h3>
-            <p class="main-p">Marketing</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/ProjectCard3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="three-h">Meditation App</h3>
-            <p class="main-p">App</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/ProjectCard4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="three-h">Taxi Service</h3>
-            <p class="main-p">Marketing</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/ProjectCard5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="three-h">Screen Illustrations</h3>
-            <p class="main-p">Design</p>
-          </li>
-          <li class="li-main-list">
-            <img
-              src="./images/ProjectCard6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="three-h">Online Courses</h3>
-            <p class="main-p">Marketing</p>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <h2 class="h-main-list-portfolio">Our Portfolio</h2>
+          <ul class="ul-main-list-portfolio">
+            <li class="li-main-list-portfolio">
+              <img
+                src="./images/ProjectCard1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="main-text-portfolio">
+                <h3 class="three-h">Banking App</h3>
+                <p class="main-p">App</p>
+              </div>
+            </li>
+            <li class="li-main-list-portfolio">
+              <img
+                src="./images/ProjectCard2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="main-text-portfolio">
+                <h3 class="three-h">Cashless Payment</h3>
+                <p class="main-p">Marketing</p>
+              </div>
+            </li>
+            <li class="li-main-list-portfolio">
+              <img
+                src="./images/ProjectCard3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="main-text-portfolio">
+                <h3 class="three-h">Meditation App</h3>
+                <p class="main-p">App</p>
+              </div>
+            </li>
+          </ul>
+
+          <ul class="ul-main-list-portfolio">
+            <li class="li-main-list-portfolio">
+              <img
+                src="./images/ProjectCard4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="main-text-portfolio">
+                <h3 class="three-h">Taxi Service</h3>
+                <p class="main-p">Marketing</p>
+              </div>
+            </li>
+            <li class="li-main-list-portfolio">
+              <img
+                src="./images/ProjectCard5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="main-text-portfolio">
+                <h3 class="three-h">Screen Illustrations</h3>
+                <p class="main-p">Design</p>
+              </div>
+            </li>
+            <li class="li-main-list-portfolio">
+              <img
+                src="./images/ProjectCard6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="main-text-portfolio">
+                <h3 class="three-h">Online Courses</h3>
+                <p class="main-p">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">
-        Web<span class="footer-color-logo">Studio</span>
-      </a>
-      <p class="footer-p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="conteiner footer-conteiner">
+        <a href="./index.html" class="footer-logo">
+          Web<span class="footer-color-logo">Studio</span>
+        </a>
+        <p class="footer-p">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
