--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <main class="main">
       <!-- 1 section -->
       <section class="main-title">
-        <div class="conteiner">
+        <div class="container">
           <h1 class="one-h">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
         </div>
@@ -101,7 +101,7 @@
           <h2 hidden class="two-h">team list</h2>
           <ul class="ul-main-list">
             <li class="li-main-list">
-              <h3 class="three-h">Strategy</h3>
+              <h3 class="main-h">Strategy</h3>
               <p class="main-p">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -134,7 +134,7 @@
 
       <!-- 3 section -->
       <section class="main-list-team">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="h-main-list-team">Our Team</h2>
           <ul class="ul-main-list-team">
             <li class="li-main-list-team">
@@ -191,7 +191,7 @@
 
       <!-- 4 section -->
       <section class="main-list-portfolio">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="h-main-list-portfolio">Our Portfolio</h2>
           <ul class="ul-main-list-portfolio">
             <li class="li-main-list-portfolio">
@@ -230,9 +230,7 @@
                 <p class="main-p">App</p>
               </div>
             </li>
-          </ul>
 
-          <ul class="ul-main-list-portfolio">
             <li class="li-main-list-portfolio">
               <img
                 src="./images/ProjectCard4.jpg"
@@ -275,7 +273,7 @@
     </main>
 
     <footer class="footer">
-      <div class="conteiner footer-conteiner">
+      <div class="container footer-conteiner">
         <a href="./index.html" class="footer-logo">
           Web<span class="footer-color-logo">Studio</span>
         </a>
