--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
   <body>
     <header class="header">
-      <div class="conteiner-header">
+      <div class="conteiner conteiner-header">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo">
             Web<span class="header-color-logo">Studio</span>
           </a>
 
           <ul class="header-menu">
-            <li>
+            <li class="li-header-menu">
               <a
                 href="./index.html"
                 rel="noopener noreferrer"
@@ -56,12 +56,12 @@
                 >Studio</a
               >
             </li>
-            <li>
+            <li class="li-header-menu">
               <a href="" rel="noopener noreferrer" class="li-studio-header-menu"
                 >Portfolio</a
               >
             </li>
-            <li>
+            <li class="li-header-menu">
               <a href="" rel="noopener noreferrer" class="li-studio-header-menu"
                 >Contacts</a
               >
@@ -89,7 +89,7 @@
     <main class="main">
       <!-- 1 section -->
       <section class="main-title">
-        <div class="container">
+        <div class="container container-main">
           <h1 class="one-h">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
         </div>
@@ -97,8 +97,8 @@
 
       <!-- 2 section -->
       <section class="main-list">
-        <div class="conteiner">
-          <h2 hidden class="two-h">team list</h2>
+        <div class="container">
+          <h2 class="two-h visually-hidden">team list</h2>
           <ul class="ul-main-list">
             <li class="li-main-list">
               <h3 class="main-h">Strategy</h3>
@@ -108,21 +108,21 @@
               </p>
             </li>
             <li class="li-main-list">
-              <h3 class="three-h">Punctuality</h3>
+              <h3 class="main-h">Punctuality</h3>
               <p class="main-p">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="li-main-list">
-              <h3 class="three-h">Diligence</h3>
+              <h3 class="main-h">Diligence</h3>
               <p class="main-p">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="li-main-list">
-              <h3 class="three-h">Technologies</h3>
+              <h3 class="main-h">Technologies</h3>
               <p class="main-p">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -145,8 +145,8 @@
                 height="260"
               />
               <div class="main-text-team">
-                <h3 class="three-h">Mark Guerrero</h3>
-                <p class="main-p">Product Designer</p>
+                <h3 class="h-main-team">Mark Guerrero</h3>
+                <p class="p-main-team">Product Designer</p>
               </div>
             </li>
             <li class="li-main-list-team">
@@ -158,7 +158,7 @@
               />
               <div class="main-text-team">
                 <h3 class="three-h">Tom Ford</h3>
-                <p class="main-p">Frontend Developer</p>
+                <p class="p-main-team">Frontend Developer</p>
               </div>
             </li>
             <li class="li-main-list-team">
@@ -170,7 +170,7 @@
               />
               <div class="main-text-team">
                 <h3 class="three-h">Camila Garcia</h3>
-                <p class="main-p">Marketing</p>
+                <p class="p-main-team">Marketing</p>
               </div>
             </li>
             <li class="li-main-list-team">
@@ -182,7 +182,7 @@
               />
               <div class="main-text-team">
                 <h3 class="three-h">Daniel Wilson</h3>
-                <p class="main-p">UI Designer</p>
+                <p class="p-main-team">UI Designer</p>
               </div>
             </li>
           </ul>
