--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <body>
     <header class="header">
-      <div class="conteiner conteiner-header">
+      <div class="container container-header">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo">
             Web<span class="header-color-logo">Studio</span>
