--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 height="260"
               />
               <div class="main-text-team">
-                <h3 class="three-h">Tom Ford</h3>
+                <h3 class="h-main-team">Tom Ford</h3>
                 <p class="p-main-team">Frontend Developer</p>
               </div>
             </li>
@@ -169,7 +169,7 @@
                 height="260"
               />
               <div class="main-text-team">
-                <h3 class="three-h">Camila Garcia</h3>
+                <h3 class="h-main-team">Camila Garcia</h3>
                 <p class="p-main-team">Marketing</p>
               </div>
             </li>
@@ -181,7 +181,7 @@
                 height="260"
               />
               <div class="main-text-team">
-                <h3 class="three-h">Daniel Wilson</h3>
+                <h3 class="h-main-team">Daniel Wilson</h3>
                 <p class="p-main-team">UI Designer</p>
               </div>
             </li>
@@ -202,7 +202,7 @@
                 height="300"
               />
               <div class="main-text-portfolio">
-                <h3 class="three-h">Banking App</h3>
+                <h3 class="h-main-portfolio">Banking App</h3>
                 <p class="main-p">App</p>
               </div>
             </li>
@@ -214,7 +214,7 @@
                 height="300"
               />
               <div class="main-text-portfolio">
-                <h3 class="three-h">Cashless Payment</h3>
+                <h3 class="h-main-portfolio">Cashless Payment</h3>
                 <p class="main-p">Marketing</p>
               </div>
             </li>
@@ -226,7 +226,7 @@
                 height="300"
               />
               <div class="main-text-portfolio">
-                <h3 class="three-h">Meditation App</h3>
+                <h3 class="h-main-portfolio">Meditation App</h3>
                 <p class="main-p">App</p>
               </div>
             </li>
@@ -239,7 +239,7 @@
                 height="300"
               />
               <div class="main-text-portfolio">
-                <h3 class="three-h">Taxi Service</h3>
+                <h3 class="h-main-portfolio">Taxi Service</h3>
                 <p class="main-p">Marketing</p>
               </div>
             </li>
@@ -251,7 +251,7 @@
                 height="300"
               />
               <div class="main-text-portfolio">
-                <h3 class="three-h">Screen Illustrations</h3>
+                <h3 class="h-main-portfolio">Screen Illustrations</h3>
                 <p class="main-p">Design</p>
               </div>
             </li>
@@ -263,7 +263,7 @@
                 height="300"
               />
               <div class="main-text-portfolio">
-                <h3 class="three-h">Online Courses</h3>
+                <h3 class="h-main-portfolio">Online Courses</h3>
                 <p class="main-p">Marketing</p>
               </div>
             </li>
