--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
     <main class="main">
       <!-- 1 section -->
       <section class="main-title">
-        <div class="container container-main">
-          <h1 class="one-h">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-button">Order Service</button>
+        <div class="container">
+          <div class="container-noe-h">
+            <h1 class="one-h">Effective Solutions for Your Business</h1>
+          </div>
+          <div class="container-button">
+            <button type="button" class="main-button">Order Service</button>
+          </div>
         </div>
       </section>
 
