--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer-conteiner">
+      <div class="container">
         <a href="./index.html" class="footer-logo">
           Web<span class="footer-color-logo">Studio</span>
         </a>
